create basic structure json swagger
