# server/docs/api.yaml
@@ -8,42 +8,142 @@ info:
         name: Dan Ruan
 servers:
     - url: http://localhost:8080
+tags:
+    - name: Auth
 components:
     schemas:
+        Result:
+            type: object
+            properties:
+                ok:
+                    type: boolean
+                status:
+                    type: number
+                value:
+                    type: object
+                    nullable: true
+                error:
+                    type: object
+                    nullable: true
+                    properties:
+                        title:
+                            type: string
+                        message:
+                            type: string
+                        description:
+                            type: string
+                            nullable: true
+                        stack:
+                            type: string
+                            nullable: true
+                        causes:
+                            type: array
+                            items:
+                                type: object
+                                properties:
+                                    message:
+                                        type: string
+                                    cause:
+                                        type: string
+                                        nullable: true
+        PeopleType:
+            type: string
+            enum: [NATURAL_PERSON, LEGAL_ENTITY]
+        Gender:
+            type: string
+            enum: [MASCULINE, FEMININE]
         People:
             type: object
             properties:
                 type:
-                    type: string
-                    enum:
-                        - NATURAL_PERSON
-                        - LEGAL_ENTITY
+                    $ref: "#/components/schemas/PeopleType"
+    responses:
+        400:
+            description: There was an error in the operation
+            content:
+                application/json:
+                    schema:
+                        allOf:
+                            - $ref: "#/components/schemas/Result"
+                            - type: object
+                              properties:
+                                  value:
+                                      nullable: true
+                                      default: null
+                                      example: null
+                                  error:
+                                      nullable: false
+        500:
+            description: Server internal error
+            content:
+                application/json:
+                    schema:
+                        allOf:
+                            - $ref: "#/components/schemas/Result"
+                            - type: object
+                              properties:
+                                  value:
+                                      nullable: true
+                                      default: null
+                                      example: null
+                                  error:
+                                      nullable: false
 paths:
     /customer/auth/customer/sign-up:
-        #  name: string;
-        # login: string;
-        # password: string;
-        # peopleType: PeopleModel.Type;
-        # itinCnpj: string;
-        # gender?: "MASCULINE" | "FEMININE" | undefined;
-        # dateOfBirth?: Date | undefined;
         post:
             description: Create a customer account
+            tags:
+                - "Auth"
             requestBody:
                 required: true
                 content:
                     application/json:
                         schema:
-                            type: "object"
+                            type: object
                             properties:
                                 name:
-                                    type: "string"
+                                    type: string
+                                type:
+                                    $ref: "#/components/schemas/PeopleType"
+                                    default: NATURAL_PERSON
                                 login:
-                                    type: "string"
+                                    type: string
                                 password:
-                                    type: "string"
+                                    type: string
                                 itinCnpj:
-                                    type: "string"
+                                    type: string
+                                gender:
+                                    $ref: "#/components/schemas/Gender"
+                                dateOfBirth:
+                                    type: string
+
+                            required:
+                                - name
+                                - login
+                                - password
+                                - itinCnpj
+                                - gender
+
             responses:
-                "201":
-                    description: OK
+                201:
+                    description: Created
+                    content:
+                        application/json:
+                            schema:
+                                allOf:
+                                    - $ref: "#/components/schemas/Result"
+                                    - type: object
+                                      properties:
+                                          status:
+                                              type: number
+                                              default: 201
+                                          value:
+                                              type: object
+                                              properties:
+                                                  message:
+                                                      type: string
+                                                      default: "Register user successfully"
+                400:
+                    $ref: "#/components/responses/400"
+                500:
+                    $ref: "#/components/responses/500"
